log_output/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outputlogger
  template:
    metadata:
      labels:
        app: outputlogger
    spec:
      containers:
        - name: output-writer
          image: fajouianas/devops-with-kubernetes:1.11-writer
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-logs
              mountPath: /shared
        - name: output-reader
          image: fajouianas/devops-with-kubernetes:1.11-reader
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-logs
              mountPath: /shared
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: shared-storage-claim
