log_output/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: outputlogger
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
